Bug 942988 - Consider audio mixer latency (from audio back end) for opensl_stream_get_position() to improve A/V sync. r=padenot